# microatoll_sim

./: README.md  pyproject.toml
examples/: benchmarks.ipynb  example.ipynb
examples/data/: SeaLevel.csv
src/microatoll_sim/: analytical_simulator.py  simulator.py
