[project]
authors = [
  {name = "Junki Komori", email = "junki.komori@ntu.edu.sg"},
  {name = "Rohan Gautam", email = "rohan.gautam@ntu.edu.sg"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A coral microatoll growth simulator"
name = "microatoll_sim"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
